--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -15,6 +15,20 @@ a {
   box-sizing: border-box;
 }
 
+.container {
+  padding: 0 2rem;
+}
+
+.main {
+  min-height: 100vh;
+  padding: 4rem 0;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 /* Spacing styles */
 .t-sm {
   margin-top: 4px;
